--- a/webui/BundleAdmin/bundle/webapp/templates/install.html
+++ b/webui/BundleAdmin/bundle/webapp/templates/install.html
@@ -1,14 +1,13 @@
 <div class="groupbox">
-  <form method="post" action="/macchina/bundles/install" enctype="multipart/form-data">
-    <table class="list">
-      <tr class="even">
-        <th>Bundle File (.bndl)</th>
-        <td><input type="file" name="file" size="64"></td>
-      </tr>
-      <tr class="odd">
-        <th></th>
-        <td><input type="submit" value="Upload and Install"></td>
-      </tr>
-    </table>
-  </form>
+  <h1>Install Bundle</h1>
+    <div ng-file-drop ng-file-select ng-model="files" class="drop-box" 
+         drag-over-class="dragover" ng-multiple="false" allow-dir="false"
+         ng-accept="'.bndl'">
+      Drop bundle (.bndl) file or click to upload and install.
+    </div>
+    <div ng-no-file-drop>File drag/drop is not supported for this browser.</div>
+    <div ng-if="status != ''">
+      <img src="/macchina/bundles/images/loading.gif" style="vertical-align: middle" alt="">
+      {{status}}
+    </div>
 </div>
