--- a/doc/00150-MacchinaGettingStarted.page
+++ b/doc/00150-MacchinaGettingStarted.page
@@ -136,7 +136,7 @@ All shared libraries should go into the <*lib*> directory, and all bundles go in
 You can use the <*install_runtime*> Makefile target to copy all these files into
 a directory hierarchy like above:
 
-    POCO_CONFIG=Yocto make -s install_runtime INSTALLDIR=/path/to/macchina-install-dir
+    $ POCO_CONFIG=Yocto make -s install_runtime INSTALLDIR=/path/to/macchina-install-dir
 ----
 
 Then you can simply pack the directory into an archive (e.g., <*.tar.gz*>) file and 
