--- a/doc/90100-MacchinaAcknowledgements.page
+++ b/doc/90100-MacchinaAcknowledgements.page
@@ -428,7 +428,7 @@ as their terms may differ from the terms below.
 ----
 
 
-!!!Paho MQTT C Client
+!!!Paho MQTT C Client Library
 
 The Paho MQTT C Client has been released under the Eclipse Distribution License - v 1.0
 and the Eclipse Public License - v 1.0.
